<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_delete_despensa"
        android:title="@string/borrarSelecDespensa"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item android:id="@+id/action_deleteAll_despensa"
        android:title="@string/borrarTodoDespensa"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item android:id="@+id/action_delete_lista"
        android:title="@string/borrarSelecLista"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item android:id="@+id/action_deleteAll_lista"
        android:title="@string/borrarTodoLista"
        android:orderInCategory="2"
        app:showAsAction="never" />

</menu>