<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- ____ PRIMERA FILA_________________________________ -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginEnd="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Lunes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/chewy"
                android:text="@string/resumenLunes"
                android:textSize="24sp" />

            ​

            <TextView
                android:id="@+id/desayunoLunes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#00897B"
                android:backgroundTint="#00897B"
                android:paddingStart="8dp"
                android:text="@string/resumendesayunoLunes"
                android:textColor="#FFFFFF"
                android:typeface="normal" />

            <TextView
                android:id="@+id/comidaLunes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="#00897B"
                android:backgroundTint="#00897B"
                android:paddingStart="8dp"
                android:text="@string/resumencomidaLunes"
                android:textColor="#FFFFFF"
                android:typeface="normal" />

            <TextView
                android:id="@+id/cenaLunes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00897B"
                android:backgroundTint="#00897B"
                android:paddingStart="8dp"
                android:text="@string/resumencenaLunes"
                android:textColor="#FFFFFF"
                android:typeface="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Martes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/chewy"
                android:text="@string/resumenMartes"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/desayunoMartes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#00897B"
                android:backgroundTint="#00897B"
                android:paddingStart="8dp"
                android:text="@string/resumendesayunoMartes"
                android:textColor="#FFFFFF"
                android:typeface="normal" />

            <TextView
                android:id="@+id/comidaMartes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#00897B"
                android:backgroundTint="#00897B"
                android:paddingStart="8dp"
                android:text="@string/resumencomidaMartes"
                android:textColor="#FFFFFF"
                android:typeface="normal" />

            <TextView
                android:id="@+id/cenaMartes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#00897B"
                android:backgroundTint="#00897B"
                android:paddingStart="8dp"
                android:text="@string/resumencenaMartes"
                android:textColor="#FFFFFF"
                android:typeface="normal" />

        </LinearLayout>
    </LinearLayout>

    <!-- ____ SEGUNDA FILA_________________________________ -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginEnd="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Miércoles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/chewy"
                android:text="@string/resumenMiércoles"
                android:textSize="24sp" />


            <TextView
                android:id="@+id/desayunoMiércoles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#00897B"
                android:backgroundTint="#00897B"
                android:paddingStart="8dp"
                android:text="@string/resumendesayunoMiércoles"
                android:textColor="#FFFFFF"
                android:typeface="normal" />

            <TextView
                android:id="@+id/comidaMiércoles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#00897B"
                android:backgroundTint="#00897B"
                android:paddingStart="8dp"
                android:text="@string/resumencomidaMiércoles"
                android:textColor="#FFFFFF"
                android:typeface="normal" />

            <TextView
                android:id="@+id/cenaMiércoles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#00897B"
                android:backgroundTint="#00897B"
                android:paddingStart="8dp"
                android:text="@string/resumencenaMiércoles"
                android:textColor="#FFFFFF"
                android:typeface="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Jueves"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/chewy"
                android:text="@string/resumenJueves"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/desayunoJueves"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#00897B"
                android:backgroundTint="#00897B"
                android:paddingStart="8dp"
                android:text="@string/resumendesayunoJueves"
                android:textColor="#FFFFFF"
                android:typeface="normal" />

            <TextView
                android:id="@+id/comidaJueves"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#00897B"
                android:backgroundTint="#00897B"
                android:paddingStart="8dp"
                android:text="@string/resumencomidaJueves"
                android:textColor="#FFFFFF"
                android:typeface="normal" />

            <TextView
                android:id="@+id/cenaJueves"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#00897B"
                android:backgroundTint="#00897B"
                android:paddingStart="8dp"
                android:text="@string/resumencenaJueves"
                android:textColor="#FFFFFF"
                android:typeface="normal" />

        </LinearLayout>
    </LinearLayout>

    <!-- ____ TERCERA FILA_________________________________ -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginEnd="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Viernes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/chewy"
                android:text="@string/resumenViernes"
                android:textSize="24sp" />

            ​

            <TextView
                android:id="@+id/desayunoViernes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#00897B"
                android:backgroundTint="#00897B"
                android:paddingStart="8dp"
                android:text="@string/resumendesayunoViernes"
                android:textColor="#FFFFFF"
                android:typeface="normal" />

            <TextView
                android:id="@+id/comidaViernes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#00897B"
                android:backgroundTint="#00897B"
                android:paddingStart="8dp"
                android:text="@string/resumencomidaViernes"
                android:textColor="#FFFFFF"
                android:typeface="normal" />

            <TextView
                android:id="@+id/cenaViernes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#00897B"
                android:backgroundTint="#00897B"
                android:paddingStart="8dp"
                android:text="@string/resumencenaViernes"
                android:textColor="#FFFFFF"
                android:typeface="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Sábado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/chewy"
                android:text="@string/resumenSábado"
                android:textSize="24sp" />

            ​

            <TextView
                android:id="@+id/desayunoSábado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#00897B"
                android:backgroundTint="#00897B"
                android:paddingStart="8dp"
                android:text="@string/resumendesayunoSábado"
                android:textColor="#FFFFFF"
                android:typeface="normal" />

            <TextView
                android:id="@+id/comidaSábado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#00897B"
                android:backgroundTint="#00897B"
                android:paddingStart="8dp"
                android:text="@string/resumencomidaSábado"
                android:textColor="#FFFFFF"
                android:typeface="normal" />

            <TextView
                android:id="@+id/cenaSábado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#00897B"
                android:backgroundTint="#00897B"
                android:paddingStart="8dp"
                android:text="@string/resumencenaSábado"
                android:textColor="#FFFFFF"
                android:typeface="normal" />

        </LinearLayout>
    </LinearLayout>

    <!-- ____CUARTA FILA_________________________________ -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginEnd="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Domingo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/chewy"
                android:text="@string/resumenDomingo"
                android:textSize="24sp" />            ​

            <TextView
                android:id="@+id/desayunoDomingo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#00897B"
                android:backgroundTint="#00897B"
                android:paddingStart="8dp"
                android:text="@string/resumendesayunoDomingo"
                android:textColor="#FFFFFF"
                android:typeface="normal" />

            <TextView
                android:id="@+id/comidaDomingo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#00897B"
                android:backgroundTint="#00897B"
                android:paddingStart="8dp"
                android:text="@string/resumencomidaDomingo"
                android:textColor="#FFFFFF"
                android:typeface="normal" />

            <TextView
                android:id="@+id/cenaDomingo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#00897B"
                android:backgroundTint="#00897B"
                android:paddingStart="8dp"
                android:text="@string/resumencenaDomingo"
                android:textColor="#FFFFFF"
                android:typeface="normal" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imagenComeSano"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/comesano"
            tools:scaleType="centerInside" />

    </LinearLayout>
    <!-- _________NAV BAR_________________________ -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        app:itemIconTint="@color/itemIconTint"
        app:itemTextColor="@color/itemIconTint"
        app:menu="@menu/navigation_bottom" />

</LinearLayout>