<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<!-- ___ RESUMEN PERSONAL _____________________ -->
    <TextView
        android:id="@+id/resumenPeso"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:paddingStart="10dp"
        android:backgroundTint="#EAECEC"
        android:fontFamily="@font/chewy"
        android:text="@string/resumenPeso"
        android:textSize="24sp"
        android:onClick="perfilButton"
        android:background="@drawable/esquinas_redondeadas"/>

<!-- _____ RESUMEN NEVERA _______________________-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/resumenListaCompra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/chewy"
            android:text="Lista de la compra/Despensa"
            android:textAlignment="textStart"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/alimentoCompra1"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="wrap_content"
                android:padding="8sp"
                android:hint="@string/resumenListaAlimento1"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:backgroundTint="#EAECEC"
                android:background="@drawable/esquinas_redondeadas"
                android:onClick="neveraButton"/>

            <ImageView
                android:id="@+id/add_nevera"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/mas_azul"
                android:onClick="neveraButton"/>

        </LinearLayout>

    </LinearLayout>

<!-- _____ BUSCAR RECETA _______________________-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/recetaDelDía"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chewy"
            android:text="Buscador de recetas"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ensaladaGarbanzos"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ensalada_garbanzos"
                tools:ignore="ContentDescription"
                tools:scaleType="centerInside"
                android:background="@drawable/esquinas_redondeadas"
                android:onClick="goBuscador"/>

            <TextView
                android:id="@+id/recetaEnsaladaGarbanzos"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:layout_marginTop="10dp"
                android:text="@string/resumenRecetaEnsaladaGarbanzos"
                android:textAlignment="center"
                android:onClick="goBuscador"/>

        </LinearLayout>
    </LinearLayout>

<!-- _____ PLAN SEMANAL _______________________-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/planSemanal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/chewy"
            android:text="@string/resumenPlanSemanal"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/añadirMenu"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="wrap_content"
                android:padding="8sp"
                android:hint="@string/resumenAñadirMenu"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:backgroundTint="#EAECEC"
                android:background="@drawable/esquinas_redondeadas"/>

            <ImageView
                android:id="@+id/add"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/mas_azul"
                android:onClick="añadirMenuButton"/>

        </LinearLayout>
    </LinearLayout>

<!-- _________NAV BAR_________________________ -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        app:itemIconTint="@color/itemIconTint"
        app:itemTextColor="@color/itemIconTint"
        app:menu="@menu/navigation_bottom"
        app:labelVisibilityMode="unlabeled" />

</LinearLayout>